# rag-refapp

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/opensearch/: docker-compose.yml
app/api/routes/: chat.py  health.py  index.py  ingest.py
app/components/: opensearchwriter.py
app/opensearch/: README.md  database.py  database_config.py
app/pipelines/: markdown_pipeline.py  retrieval_pipeline.py
app/services/: retrieval_service.py
docs/sample/: sample-readme.md
postman/: rag-refapp.postman_collection.json
rag-refapp/opensearch/: vector_database.py
rag_refapp/: config.py  main.py
rag_refapp/api/opensearch/: README.md  database_config.py  vector_database.py
rag_refapp/api/routes/: chat.py  health.py  index.py  ingest.py
rag_refapp/database/: database_config.py  vector_database.py
rag_refapp/models/: document.py
rag_refapp/opensearch/: vector_database.py
rag_refapp/pipelines/: embedding_pipeline.py  ingestion_pipeline.py  rag_pipeline.py  retrieval_pipeline.py
rag_refapp/routes/: ingest.py
tests/: test_main.py
tests/api/routes/: test_health.py  test_ingest.py
tests/routes/: test_health.py
