[tool.poetry]
name = "rag_refapp"
version = "0.1.0"
description = ""
authors = ["Subodh Khanal <skhanal5@terpmail.umd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
black = "^24.10.0"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
httpx = "^0.27.2"
pytest = "^8.3.3"
opensearch-py = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
